--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "naive-ui": "^2.25.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   }
