--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "easytimer.js": "^4.5.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
